--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -536,7 +536,14 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Como você pode ver na Figura 7-9, o gráfico representa as três diferentes tendências temporais\n",
+    "com três cores e marcadores diferentes. Nesses casos, quando a tendência de uma função é\n",
+    "tão óbvio, o enredo talvez não seja a representação mais adequada, mas é melhor\n",
+    "para usar as linhas (consulte a Figura 7-10). Para diferenciar as três tendências com algo diferente\n",
+    "do que a cor, você pode usar o padrão composto por diferentes combinações de pontos e\n",
+    "traços (- e .)."
+   ]
   },
   {
    "cell_type": "code",
@@ -551,21 +558,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Using the kwargs"
+    "#### Usando os kwargs"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The objects that make up a chart have many attributes that characterize them. These\n",
-    "attributes are all default values, but can be set through the use of keyword args, often\n",
-    "referred as kwargs.\n",
+    "Os objetos que compõem um gráfico possuem muitos atributos que os caracterizam. Esses\n",
+    "todos os atributos são valores padrão, mas podem ser definidos por meio do uso de argumentos de palavra-chave, geralmente\n",
+    "referidos como kwargs.\n",
     "\n",
-    "These keywords are passed as arguments to functions. In reference documentation\n",
-    "of the various functions of the matplotlib library, you will always find them referred to as\n",
-    "kwargs in the last position. For example the plot() function that you are using in these\n",
-    "examples is referred to in the following way."
+    "Essas palavras-chave são passadas como argumentos para funções. Na documentação de referência\n",
+    "das várias funções da biblioteca matplotlib, você sempre as encontrará referidas como\n",
+    "kwargs na última posição. Por exemplo, a função plot() que você está usando nestes\n",
+    "exemplos é referido da seguinte forma."
    ]
   },
   {
@@ -590,35 +597,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Working with Multiple Figures and Axes"
+    "#### Trabalhando com várias figuras e eixos"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So far you have seen how all pyplot commands are routed to the display of a single figure.\n",
-    "Actually, matplotlib allows you to manage multiple figures simultaneously, and within\n",
-    "each figure, it offers the ability to view different plots defined as subplots.\n",
+    "Até agora você viu como todos os comandos pyplot são roteados para a exibição de uma única figura.\n",
+    "Na verdade, o matplotlib permite que você gerencie várias figuras simultaneamente e dentro\n",
+    "cada figura, oferece a possibilidade de visualizar diferentes parcelas definidas como subparcelas.\n",
     "\n",
-    "So when you are working with pyplot, you must always keep in mind the concept of\n",
-    "the current Figure and current Axes (that is, the plot shown within the figure).\n",
+    "Portanto, ao trabalhar com pyplot, você deve sempre ter em mente o conceito de\n",
+    "a figura atual e os eixos atuais (ou seja, o gráfico mostrado na figura).\n",
     "\n",
-    "Now you will see an example where two subplots are represented in a single figure.\n",
-    "The subplot() function, in addition to subdividing the figure in different drawing areas,\n",
-    "is used to focus the commands on a specific subplot.\n",
+    "Agora você verá um exemplo onde duas subparcelas são representadas em uma única figura.\n",
+    "A função subplot(), além de subdividir a figura em diferentes áreas de desenho,\n",
+    "é usado para focar os comandos em uma subtrama específica.\n",
     "\n",
-    "The argument passed to the subplot() function sets the mode of subdivision and\n",
-    "determines which is the current subplot. The current subplot will be the only figure\n",
-    "that will be affected by the commands. The argument of the subplot() function is\n",
-    "composed of three integers. The first number defines how many parts the figure is split\n",
-    "into vertically. The second number defines how many parts the figure is divided into\n",
-    "horizontally. The third issue selects which is the current subplot on which you can direct\n",
-    "commands.\n",
+    "O argumento passado para a função subplot() define o modo de subdivisão e\n",
+    "determina qual é a subtrama atual. A subtrama atual será a única figura\n",
+    "que serão afetados pelos comandos. O argumento da função subplot() é\n",
+    "composta por três números inteiros. O primeiro número define em quantas partes a figura é dividida\n",
+    "na vertical. O segundo número define em quantas partes a figura é dividida\n",
+    "horizontalmente. A terceira questão seleciona qual é a subtrama atual na qual você pode direcionar\n",
+    "comandos.\n",
     "\n",
-    "Now you will display two sinusoidal trends (sine and cosine) and the best way to do\n",
-    "that is to divide the canvas vertically in two horizontal subplots (as shown in Figure 7-12).\n",
-    "So the numbers to pass as an argument are 211 and 212."
+    "Agora você exibirá duas tendências senoidais (seno e cosseno) e a melhor maneira de fazer\n",
+    "ou seja, dividir a tela verticalmente em duas subparcelas horizontais (conforme mostrado na Figura 7-12).\n",
+    "Portanto, os números a serem passados como argumento são 211 e 212."
    ]
   },
   {
@@ -641,9 +648,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now you do the same thing by dividing the figure in two vertical subplots. The\n",
-    "numbers to be passed as arguments to the subplot() function are 121 and 122\n",
-    "(as shown in Figure 7-13)."
+    "Agora você faz a mesma coisa dividindo a figura em duas subtramas verticais. O\n",
+    "os números a serem passados como argumentos para a função subplot() são 121 e 122\n",
+    "(conforme mostrado na Figura 7-13)."
    ]
   },
   {
@@ -666,21 +673,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Adding Elements to the Chart"
+    "#### Adicionando elementos ao gráfico"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "In order to make a chart more informative, many times it is not enough to represent the\n",
-    "data using lines or markers and assign the range of values using two axes. In fact, there\n",
-    "are many other elements that can be added to a chart in order to enrich it with additional\n",
-    "information.\n",
-    "\n",
-    "In this section you will see how to add elements to the chart as text labels, a legend,\n",
-    "and so on."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
