--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -679,31 +679,39 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "#### Adding Text"
+    "Para tornar um gráfico mais informativo, muitas vezes não basta representar o\n",
+    "dados usando linhas ou marcadores e atribua o intervalo de valores usando dois eixos. Na verdade, lá\n",
+    "muitos outros elementos que podem ser adicionados a um gráfico para enriquecê-lo com\n",
+    "Informação.\n",
+    "\n",
+    "Nesta seção, você verá como adicionar elementos ao gráfico como rótulos de texto, uma legenda,\n",
+    "e assim por diante."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You’ve already seen how you can add the title to a chart with the title() function. Two\n",
-    "other textual indications you can add the axis labels. This is possible through the use of\n",
-    "two other specific functions, called xlabel() and ylabel(). These functions take as an\n",
-    "argument a string, which will be the shown text."
+    "#### Adicionando texto"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now add two axis labels to the chart. They will describe which kind of value is\n",
-    "assigned to each axis"
+    "Você já viu como adicionar o título a um gráfico com a função title(). Dois\n",
+    "outras indicações textuais, você pode adicionar os rótulos dos eixos. Isso é possível através do uso de\n",
+    "duas outras funções específicas, chamadas xlabel() e ylabel(). Estas funções assumem como\n",
+    "argumento uma string, que será o texto mostrado."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Agora adicione dois rótulos de eixo ao gráfico. Eles irão descrever que tipo de valor é\n",
+    "atribuído a cada eixo"
    ]
   },
   {
@@ -723,9 +731,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Thanks to the keywords, you can change the characteristics of the text. For example,\n",
-    "you can modify the title by changing the font and increasing the size of the characters.\n",
-    "You can also modify the color of the axis labels to accentuate the title of the plot"
+    "Graças às palavras-chave, você pode alterar as características do texto. Por exemplo,\n",
+    "você pode modificar o título alterando a fonte e aumentando o tamanho dos caracteres.\n",
+    "Você também pode modificar a cor dos rótulos dos eixos para acentuar o título do gráfico"
    ]
   },
   {
@@ -745,8 +753,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But matplotlib is not limited to this: pyplot allows you to add text to any position\n",
-    "within a chart. This feature is performed by a specific function called text()."
+    "Mas matplotlib não se limita a isso: pyplot permite adicionar texto a qualquer posição\n",
+    "dentro de um gráfico. Esse recurso é executado por uma função específica chamada text()."
    ]
   },
   {
@@ -762,13 +770,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first two arguments are the coordinates of the location where you want to place\n",
-    "the text. s is the string of text to be added, and fontdict (optional) is the font that you\n",
-    "want to use. Finally, you can add the keywords.\n",
+    "Os dois primeiros argumentos são as coordenadas do local onde você deseja colocar\n",
+    "o texto. s é a string de texto a ser adicionada e fontdict (opcional) é a fonte que você\n",
+    "quer usar. Finalmente, você pode adicionar as palavras-chave.\n",
     "\n",
-    "Add the label to each point of the plot. Because the first two arguments to the text()\n",
-    "function are the coordinates of the graph, you have to use the coordinates of the four\n",
-    "points of the plot shifted slightly on the y-axis."
+    "Adicione o rótulo a cada ponto do gráfico. Porque os dois primeiros argumentos para o text ()\n",
+    "função são as coordenadas do gráfico, você tem que usar as coordenadas dos quatro\n",
+    "pontos do gráfico deslocaram-se ligeiramente no eixo y."
    ]
   },
   {
