--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -800,22 +800,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since matplotlib is a graphics library designed to be used in scientific circles, it\n",
-    "must be able to exploit the full potential of scientific language, including mathematical\n",
-    "expressions. matplotlib offers the possibility to integrate LaTeX expressions, thereby\n",
-    "allowing you to insert mathematical expressions within the chart.\n",
+    "Como matplotlib é uma biblioteca gráfica projetada para ser usada em círculos científicos, ela\n",
+    "deve ser capaz de explorar todo o potencial da linguagem científica, incluindo\n",
+    "expressões. matplotlib oferece a possibilidade de integrar expressões LaTeX,\n",
+    "permitindo que você insira expressões matemáticas dentro do gráfico.\n",
     "\n",
-    "To do this, you can add a LaTeX expression to the text, enclosing it between two $\n",
-    "characters. The interpreter will recognize them as LaTeX expressions and convert them\n",
-    "to the corresponding graphic, which can be a mathematical expression, a formula,\n",
-    "mathematical characters, or just Greek letters. Generally you have to precede the string\n",
-    "containing LaTeX expressions with an r, which indicates raw text, in order to avoid\n",
-    "unintended escape sequences.\n",
+    "Para fazer isso, você pode adicionar uma expressão LaTeX ao texto, colocando-a entre dois $\n",
+    "personagens. O interpretador irá reconhecê-los como expressões LaTeX e convertê-los\n",
+    "ao gráfico correspondente, que pode ser uma expressão matemática, uma fórmula,\n",
+    "caracteres matemáticos ou apenas letras gregas. Geralmente você tem que preceder a string\n",
+    "contendo expressões LaTeX com um r, que indica texto bruto, para evitar\n",
+    "sequências de fuga não intencionais.\n",
     "\n",
-    "Here, you can also use the keywords to further enrich the text to be shown in the\n",
-    "plot. Therefore, as an example, you can add the formula describing the trend followed by\n",
-    "the point of the plot and enclose it in a colored bounding box\n",
-    "\n"
+    "Aqui, você também pode usar as palavras-chave para enriquecer ainda mais o texto a ser mostrado no\n",
+    "trama. Portanto, como exemplo, você pode adicionar a fórmula que descreve a tendência seguida por\n",
+    "o ponto do gráfico e coloque-o em uma caixa delimitadora colorida"
    ]
   },
   {
@@ -840,26 +839,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To get a complete view on the potential offered by LaTeX, consult Appendix A of\n",
-    "this book."
+    "#### Adicionando uma grade"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Adding a Grid"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Another element you can add to a plot is a grid. Often its addition is necessary in order to\n",
-    "better understand the position occupied by each point on the chart.\n",
+    "Outro elemento que você pode adicionar a um gráfico é uma grade. Muitas vezes sua adição é necessária para\n",
+    "entender melhor a posição ocupada por cada ponto no gráfico.\n",
     "\n",
-    "Adding a grid to a chart is a very simple operation: just add the grid() function,\n",
-    "passing True as an argument"
+    "Adicionar uma grade a um gráfico é uma operação muito simples: basta adicionar a função grid(),\n",
+    "passando True como um argumento"
    ]
   },
   {
@@ -885,19 +876,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Adding a Legend"
+    "#### Adicionando uma legenda"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Another very important component that should be present in any chart is the legend.\n",
-    "pyplot also provides a specific function for this type of object: legend().\n",
+    "Outro componente muito importante que deve estar presente em qualquer gráfico é a legenda.\n",
+    "pyplot também fornece uma função específica para este tipo de objeto: legend().\n",
     "\n",
-    "Add a legend to your chart with the legend() function and a string indicating the\n",
-    "words with which you want the series to be shown. In this example, you assign the First\n",
-    "series name to the input data array"
+    "Adicione uma legenda ao seu gráfico com a função legend() e uma string indicando o\n",
+    "palavras com as quais você deseja que a série seja exibida. Neste exemplo, você atribui o primeiro\n",
+    "nome da série para a matriz de dados de entrada"
    ]
   },
   {
@@ -922,15 +913,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "As you can see in Figure 7-19, the legend is added in the upper-right corner by\n",
-    "default. Again if you want to change this behavior you will need to add a few kwargs. For\n",
-    "example, the position occupied by the legend is set by assigning numbers from 0 to 10 to\n",
-    "the loc kwarg. Each of these numbers characterizes one of the corners of the chart\n",
-    "(see Table 7-1). A value of 1 is the default, that is, the upper-right corner. In the next\n",
-    "example, you will move the legend in the upper-left corner so it will not overlap with the\n",
-    "points represented in the plot."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
