--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -913,40 +913,48 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "|Location Code | Location String|\n",
-    "|---|---|\n",
-    "|0 | best|\n",
-    "|1 | upper-right|\n",
-    "|2 | upper-left|\n",
-    "|3 | lower-right|\n",
-    "|4 | lower-left|\n",
-    "|5 | right|\n",
-    "|6 | center-left|\n",
-    "|7 | center-right|\n",
-    "|8 | lower-center|\n",
-    "|9 | upper-center|\n",
-    "|10 | center|"
+    "Como você pode ver na Figura 7-19, a legenda é adicionada no canto superior direito por\n",
+    "padrão. Novamente, se você quiser alterar esse comportamento, precisará adicionar alguns kwargs. Para\n",
+    "exemplo, a posição ocupada pela legenda é definida atribuindo-se números de 0 a 10 a\n",
+    "o loc kwarg. Cada um desses números caracteriza um dos cantos do gráfico\n",
+    "(consulte a Tabela 7-1). Um valor de 1 é o padrão, ou seja, o canto superior direito. Na próxima\n",
+    "exemplo, você moverá a legenda no canto superior esquerdo para que ela não se sobreponha ao\n",
+    "pontos representados no gráfico."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Before you begin to modify the code to move the legend, I want to add a small notice.\n",
-    "Generally, the legends are used to indicate the definition of a series to the reader via\n",
-    "a label associated with a color and/or a marker that distinguishes it in the plot. So far\n",
-    "in the examples, you have used a single series that was expressed by a single plot()\n",
-    "function. Now, you have to focus on a more general case in which the same plot shows\n",
-    "more series simultaneously. Each series in the chart will be characterized by a specific\n",
-    "color and a specific marker (see Figure 7-20). In terms of code, instead, each series will be\n",
-    "characterized by a call to the plot() function and the order in which they are defined will\n",
-    "correspond to the order of the text labels passed as an argument to the legend() function."
+    "|Código de localização | Cadeia de localização|\n",
+    "|---|---|\n",
+    "|0 | melhor|\n",
+    "|1 | canto superior direito|\n",
+    "|2 | canto superior esquerdo|\n",
+    "|3 | canto inferior direito|\n",
+    "|4 | inferior esquerdo|\n",
+    "|5 | certo|\n",
+    "|6 | centro-esquerda|\n",
+    "|7 | centro-direita|\n",
+    "|8 | centro-inferior|\n",
+    "|9 | centro-superior|\n",
+    "|10 | centro|"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Antes de começar a modificar o código para mover a legenda, gostaria de acrescentar um pequeno aviso.\n",
+    "Geralmente, as legendas são usadas para indicar a definição de uma série ao leitor por meio de\n",
+    "um rótulo associado a uma cor e/ou um marcador que o distingue na trama. Até aqui\n",
+    "nos exemplos, você usou uma única série que foi expressa por um único plot()\n",
+    "função. Agora, você deve se concentrar em um caso mais geral em que o mesmo gráfico mostra\n",
+    "mais séries simultaneamente. Cada série no gráfico será caracterizada por um\n",
+    "cor e um marcador específico (veja a Figura 7-20). Em termos de código, cada série será\n",
+    "caracterizados por uma chamada para a função plot() e a ordem em que são definidos irá\n",
+    "correspondem à ordem dos rótulos de texto passados como um argumento para a função legend()."
    ]
   },
   {
@@ -976,7 +984,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Saving Your Charts"
+    "#### Salvando seus gráficos"
    ]
   },
   {
