--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -991,49 +991,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section you will learn how to save your chart in different ways depending on your\n",
-    "needs. If you need to reproduce your chart in different notebooks or Python sessions, or\n",
-    "reuse them in future projects, it is a good practice to save the Python code. On the other\n",
-    "hand, if you need to make reports or presentations, it can be very useful to save your\n",
-    "chart as an image. Moreover, it is possible to save your chart as a HTML page, and this\n",
-    "could be very useful when you need to share your work on Web."
+    "Nesta seção, você aprenderá como salvar seu gráfico de diferentes maneiras, dependendo do seu\n",
+    "precisa. Se você precisar reproduzir seu gráfico em diferentes notebooks ou sessões Python, ou\n",
+    "reutilizá-los em projetos futuros, é uma boa prática salvar o código Python. No outro\n",
+    "lado, se você precisa fazer relatórios ou apresentações, pode ser muito útil salvar seu\n",
+    "gráfico como uma imagem. Além disso, é possível salvar seu gráfico como uma página HTML, e isso\n",
+    "pode ser muito útil quando você precisa compartilhar seu trabalho na Web."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Saving the Code"
+    "#### Salvando o Código"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see from the examples in the previous sections, the code concerning the\n",
-    "representation of a single chart is growing into a fair number of rows. Once you think\n",
-    "you’ve reached a good point in your development process, you can choose to save all\n",
-    "rows of code in a .py file that you can recall at any time."
+    "Como você pode ver nos exemplos das seções anteriores, o código referente ao\n",
+    "representação de um único gráfico está crescendo em um bom número de linhas. Uma vez que você pensa\n",
+    "você alcançou um bom ponto em seu processo de desenvolvimento, você pode optar por salvar todos\n",
+    "linhas de código em um arquivo .py que você pode acessar a qualquer momento."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can use the magic command save% followed by the name of the file you want to\n",
-    "save followed by the number of input prompts containing the row of code that you want\n",
-    "to save. If all the code is written in only one prompt, as your case, you have to add only\n",
-    "its number; otherwise if you want to save the code written in many prompts, for example\n",
-    "from 10 to 20, you have to indicate this range with the two numbers separated by a -, that\n",
-    "is, 10-20."
+    "Você pode usar o comando mágico save% seguido do nome do arquivo que deseja\n",
+    "salvar seguido pelo número de prompts de entrada contendo a linha de código que você deseja\n",
+    "salvar. Se todo o código for escrito em apenas um prompt, como é o seu caso, você deverá adicionar apenas\n",
+    "seu número; caso contrário, se você quiser salvar o código escrito em muitos prompts, por exemplo\n",
+    "de 10 a 20, você deve indicar esse intervalo com os dois números separados por um -, que\n",
+    "é, 10-20."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In your case, you would save the Python code underlying the representation of your\n",
-    "first chart contained into the input prompt with the number 171."
+    "No seu caso, você salvaria o código Python subjacente à representação de seu\n",
+    "primeiro gráfico contido no prompt de entrada com o número 171."
    ]
   },
   {
@@ -1049,7 +1049,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You need to insert the following command to save the code into a new .py file."
+    "Você precisa inserir o seguinte comando para salvar o código em um novo arquivo .py."
    ]
   },
   {
@@ -1065,8 +1065,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After you launch the command, you will find the my_first_chart.py file in your\n",
-    "working directory"
+    "Depois de iniciar o comando, você encontrará o arquivo my_first_chart.py em seu\n",
+    "diretório de trabalho"
    ]
   },
   {
@@ -1098,10 +1098,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "Later, when you open a new IPython session, you will have your chart and start to\n",
-    "change the code at the point where you had saved it by entering the following command:"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
