--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1098,7 +1098,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Posteriormente, ao abrir uma nova sessão do IPython, você terá seu gráfico e começará a\n",
+    "altere o código no ponto onde você o salvou digitando o seguinte comando:"
+   ]
   },
   {
    "cell_type": "code",
@@ -1106,15 +1109,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ipython qtconsole --matplotlib inline -m my_first_chart.py"
+    "%run ipython qtconsole --matplotlib inline -m my_first_chart.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or you can reload the entire code in a single prompt in the QtConsole using the\n",
-    "magic command %load."
+    "Ou você pode recarregar o código inteiro em um único prompt no QtConsole usando o\n",
+    "comando mágico %load."
    ]
   },
   {
@@ -1130,7 +1133,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Or you can run it during a session with the magic command %run."
+    "Ou você pode executá-lo durante uma sessão com o comando mágico %run."
    ]
   },
   {
@@ -1146,28 +1149,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Converting Your Session to an HTML File"
+    "#### Convertendo sua sessão em um arquivo HTML"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using the IPython QtConsole, you can convert all the code and graphics present in your\n",
-    "current session to an HTML page. Simply choose File-->Save to HTML/XHTML from the\n",
-    "menu"
+    "Usando o IPython QtConsole, você pode converter todo o código e gráficos presentes em seu\n",
+    "sessão atual para uma página HTML. Basta escolher Arquivo-->Salvar em HTML/XHTML no\n",
+    "cardápio"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "You will be asked to save your session in two different formats: HTML and\n",
-    "XHMTL. The difference between the two formats is based on the image conversion type.\n",
-    "If you select HTML as the output file format, the images contained in your session will\n",
-    "be converted to PNG format. If you select XHTML as the output file format instead, the\n",
-    "images will be converted to SVG format."
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
