--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1164,33 +1164,39 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
-    "By choosing the external option, the images will be collected into a directory called\n",
-    "my_session_files. By choosing inline, the graphical information concerning the image\n",
-    "is embedded into the HTML code."
+    "Você será solicitado a salvar sua sessão em dois formatos diferentes: HTML e\n",
+    "XHMTL. A diferença entre os dois formatos é baseada no tipo de conversão da imagem.\n",
+    "Se você selecionar HTML como formato de arquivo de saída, as imagens contidas em sua sessão serão\n",
+    "ser convertido para o formato PNG. Se você selecionar XHTML como formato de arquivo de saída, o\n",
+    "as imagens serão convertidas para o formato SVG."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Saving Your Chart Directly as an Image"
+    "Ao escolher a opção externa, as imagens serão coletadas em um diretório chamado\n",
+    "my_session_files. Ao escolher inline, a informação gráfica relativa à imagem\n",
+    "está embutido no código HTML."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you are interested in saving only the figure of a chart as an image file, ignoring all\n",
-    "the code you’ve written during the session, this is also possible. In fact, thanks to\n",
-    "the savefig() function, you can directly save the chart in a PNG format, although\n",
-    "you should take care to add this function to the end of the same series of commands\n",
-    "(otherwise you’ll get a blank PNG file)."
+    "#### Salvando seu gráfico diretamente como uma imagem"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Se você estiver interessado em salvar apenas a figura de um gráfico como um arquivo de imagem, ignorando todos\n",
+    "o código que você escreveu durante a sessão, isso também é possível. Na verdade, graças a\n",
+    "a função savefig(), você pode salvar diretamente o gráfico em um formato PNG, embora\n",
+    "você deve ter o cuidado de adicionar esta função ao final da mesma série de comandos\n",
+    "(caso contrário, você obterá um arquivo PNG em branco)."
    ]
   },
   {
@@ -1220,27 +1226,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Executing the previous code, a new file will be created in your working directory.\n",
-    "This file will be named my_chart.png and will contain the image of your chart."
+    "Executando o código anterior, um novo arquivo será criado em seu diretório de trabalho.\n",
+    "Este arquivo será nomeado my_chart.png e conterá a imagem do seu gráfico."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Handling Date Values"
+    "#### Manipulando valores de data"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "One of the most common problems encountered when doing data analysis is handling\n",
-    "data of the date-time type. Displaying that data along an axis (normally the x-axis) can be\n",
-    "problematic, especially when managing ticks\n",
+    "Um dos problemas mais comuns encontrados ao fazer análise de dados é lidar com\n",
+    "dados do tipo data-hora. Exibir esses dados ao longo de um eixo (normalmente o eixo x) pode ser\n",
+    "problemático, especialmente ao gerenciar carrapatos\n",
     "\n",
-    "Take for example the display of a linear chart with a dataset of eight points in which\n",
-    "you have to represent date values on the x-axis with the following format: day-month-year."
+    "Tomemos, por exemplo, a exibição de um gráfico linear com um conjunto de dados de oito pontos em que\n",
+    "você deve representar os valores de data no eixo x com o seguinte formato: dia-mês-ano."
    ]
   },
   {
@@ -1265,29 +1271,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see in Figure 7-24, automatic management of ticks, and especially the\n",
-    "tick labels, can be a disaster. The dates expressed in this way are difficult to read,\n",
-    "there are no clear time intervals elapsed between one point and another, and there is\n",
-    "also overlap."
+    "Como você pode ver na Figura 7-24, o gerenciamento automático de ticks e, especialmente, o\n",
+    "rótulos de escala, pode ser um desastre. As datas expressas desta forma são difíceis de ler,\n",
+    "não há intervalos claros de tempo decorridos entre um ponto e outro, e há\n",
+    "também se sobrepõem."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "To manage dates it is therefore advisable to define a time scale with appropriate\n",
-    "objects. First you need to import matplotlib.dates, a module specialized for this type\n",
-    "of data. Then you define the scales of the times, as in this case, a scale of days and one of\n",
-    "the months, through the MonthLocator() and DayLocator() functions. In these cases,\n",
-    "the formatting is also very important, and to avoid overlap or unnecessary references,\n",
-    "you have to limit the tick labels to the essential, which in this case is year-month. This\n",
-    "format can be passed as an argument to the DateFormatter() function.\n",
-    "\n",
-    "After you defined the two scales, one for the days and one for the months, you can\n",
-    "set two different kinds of ticks on the x-axis, using the set_major_locator() and set_\n",
-    "minor_locator() functions on the xaxis object. Instead, to set the text format of the tick\n",
-    "labels referred to the months you have to use the set_major_formatter() function."
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
