--- a/cp-07.ipynb
+++ b/cp-07.ipynb
@@ -1478,14 +1478,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You have just defined a range from -2π to 2π on the x-axis, but by default, values on\n",
-    "ticks are shown in numerical form. Therefore you need to replace the numerical values\n",
-    "with multiple of π. You can also replace the ticks on the y-axis. To do all this, you have to\n",
-    "use xticks() and yticks() functions, passing to each of them two lists of values. The\n",
-    "first list contains values corresponding to the positions where the ticks are to be placed,\n",
-    "and the second contains the tick labels. In this particular case, you have to use strings\n",
-    "containing LaTeX format in order to correctly display the symbol π. Remember to define\n",
-    "them within two $ characters and to add a r as the prefix."
+    "Você acabou de definir um intervalo de -2π a 2π no eixo x, mas, por padrão, os valores em\n",
+    "os carrapatos são mostrados na forma numérica. Portanto, você precisa substituir os valores numéricos\n",
+    "com múltiplo de π. Você também pode substituir os carrapatos no eixo y. Para fazer tudo isso, você tem que\n",
+    "use as funções xticks() e yticks(), passando para cada uma delas duas listas de valores. O\n",
+    "primeira lista contém valores correspondentes às posições onde os ticks devem ser colocados,\n",
+    "e o segundo contém os rótulos dos ticks. Neste caso particular, você tem que usar strings\n",
+    "contendo o formato LaTeX para exibir corretamente o símbolo π. Lembre-se de definir\n",
+    "dentro de dois caracteres $ e adicionar um r como prefixo."
    ]
   },
   {
@@ -1515,17 +1515,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In all the linear charts you have seen so far, you always have the x-axis and y-axis\n",
-    "placed at the edge of the figure (corresponding to the sides of the bounding border box).\n",
-    "Another way of displaying axes is to have the two axes passing through the origin (0, 0),\n",
-    "i.e., the two Cartesian axes.\n",
+    "Em todos os gráficos lineares que você viu até agora, você sempre tem o eixo x e o eixo y colocado na borda da figura (correspondente aos lados da caixa de borda delimitadora). Outra maneira de exibir os eixos é fazer com que os dois eixos passem pela origem (0, 0), ou seja, os dois eixos cartesianos.\n",
     "\n",
-    "To do this, you must first capture the Axes object through the gca() function. Then\n",
-    "through this object, you can select each of the four sides making up the bounding box,\n",
-    "specifying for each one its position: right, left, bottom, and top. Crop the sides that do not\n",
-    "match any axis (right and bottom) using the set_color() function and indicating none\n",
-    "for color. Then, the sides corresponding to the x- and y-axes are moved to pass through\n",
-    "the origin (0,0) with the set_position() function."
+    "Para fazer isso, você deve primeiro capturar o objeto Axes através da função gca(). Então através deste objeto, você pode selecionar cada um dos quatro lados que compõem a caixa delimitadora, especificando para cada um a sua posição: direita, esquerda, inferior e superior. Corte os lados que não corresponde a qualquer eixo (direito e inferior) usando a função set_color() e indicando nenhum para cor. Em seguida, os lados correspondentes aos eixos x e y são movidos para passar por a origem (0,0) com a função set_position()."
    ]
   },
   {
